@startuml

class Biblioteca {
  -catalogo: Map<Libro, List<Copia>>
  -usuarios: List<Usuario>
  -prestamos: List<Prestamo>

  +agregarLibro(libro: Libro, cantidad: int): void
  +eliminarLibro(ISBN: String): Boolean
  +registrarUsuario(usuario: Usuario): void
  +prestarCopia(ISBN: String, usuario: Usuario): Boolean
  +devolverCopia(copia: Copia): Boolean
  +consultarStockPorTitulo(titulo: String): int
  +consultarStockPorAutor(autor: String): int
  +consultarStockPorFecha(fecha: LocalDate): int
  +buscarLibrosPorISBN(ISBN: String): List<Libro>
}

class Libro {
  -ISBN: String
  -titulo: String
  -fechaPublicacion: LocalDate
  -autores: List<String>
}

class Copia {
  -idCopia: String
  -libro: Libro
  -disponible: Boolean
}

class Usuario {
  -id: String
  -nombre: String
  -copiasPrestadas: List<Copia>
}

class Prestamo {
  -copia: Copia
  -usuario: Usuario
  -fechaPrestamo: LocalDate
  -fechaDevolucion: LocalDate
}

Biblioteca "1" *-- "*" Libro: cataloga
Biblioteca "1" *-- "*" Usuario: registra
Biblioteca "1" *-- "*" Prestamo: gestiona
Libro "1" *-- "*" Copia: tiene
Usuario "1" *-- "*" Copia: prestadas
Prestamo "1" --> "1" Copia
Prestamo "1" --> "1" Usuario

@enduml